--- a/Build-Bridges/Demos/1. ServiceBusQueueAndTopic/ServiceBusQueueAndTopic/App.config
+++ b/Build-Bridges/Demos/1. ServiceBusQueueAndTopic/ServiceBusQueueAndTopic/App.config
@@ -47,6 +47,6 @@
     <appSettings>
         <!-- Service Bus specific app setings for messaging connections -->
         <add key="Microsoft.ServiceBus.ConnectionString"
-            value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=[your secret]"/>
+            value="Endpoint=sb://pawansservicebus.servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=yN6KDSRrr1wtyeuJBIdRSUkhyU87Kikl57BOWqINv5s="/>
     </appSettings>
 </configuration>
